<resources>

    <!-- app stats -->
    <string name="app_name">Stat Guess - NBA</string>

    <!-- error messages -->

    <!-- navigation tabs -->
    <string name="games">Games</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

    <string name="title_activity_main">MainActivity</string>

    <!-- GameList fragment text -->
    <string name="hello_blank_fragment">Games Fragment</string>
    <string name="home_city">HOME</string>
    <string name="home_score">31</string>
    <string name="away_city">AWAY</string>
    <string name="away_score">23</string>
    <string name="clock_time">4:44</string>
    <string name="game_quarter">0</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="total">T</string>
    <string name="overtime">OT</string>

    <!-- Game Stats fragment text -->
    <string name="most_points">Most Points</string>
    <string name="most_rebounds">Most Rebounds</string>
    <string name="most_assists">Most Assists</string>
    <string name="game_winner">Game Winner</string>
    <string name="choose">Choose</string>
    <string name="confirm">Confirm</string>
    <string name="home_logo_desc">Home team logo</string>
    <string name="away_logo_desc">Away team logo</string>
    <string-array name="players">
        <item>Player1</item>
        <item>Player2</item>
        <item>Player3</item>
        <item>Player4</item>
        <item>Player5</item>
        <item>Player6</item>
        <item>Player7</item>
        <item>Player8</item>
        <item>Player9</item>
        <item>Player10</item>
    </string-array>

    <!-- Profile fragment text -->
    <string name="profile_test">Profile Fragment</string>

    <!-- History fragment text -->
    <string name="history_test">History Fragment</string>
</resources>
