<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_stat_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:focusable="true"
    tools:context=".view.ui.GameStatsFragment">


    <TextView
        android:id="@+id/away_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/away_city"
        android:textColor="@color/materialWhite"
        android:textSize="@dimen/font_larger"
        app:layout_constraintBottom_toBottomOf="@+id/away_logo"
        app:layout_constraintStart_toEndOf="@+id/away_logo"
        app:layout_constraintTop_toTopOf="@+id/away_logo" />

    <TextView
        android:id="@+id/home_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/home_city"
        android:textColor="@color/materialWhite"
        android:textSize="@dimen/font_larger"
        app:layout_constraintBottom_toBottomOf="@+id/home_logo"
        app:layout_constraintEnd_toStartOf="@+id/home_logo"
        app:layout_constraintTop_toTopOf="@+id/home_logo" />

    <ImageView
        android:id="@+id/away_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/away_logo_desc"
        android:src="@color/materialOrange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/home_logo_desc"
        android:src="@color/materialOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/most_points"
        style="@style/GameStatLabels"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/most_points"
        app:layout_constraintBottom_toTopOf="@+id/most_rebounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/away_logo" />

    <TextView
        android:id="@+id/most_rebounds"
        style="@style/GameStatLabels"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/most_rebounds"
        app:layout_constraintBottom_toTopOf="@+id/most_assists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/most_points" />

    <TextView
        android:id="@+id/most_assists"
        style="@style/GameStatLabels"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/most_assists"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/most_rebounds" />

    <Button
        android:id="@+id/button_away_points"
        style="@style/ButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/choose"
        app:layout_constraintBaseline_toBaselineOf="@+id/most_points"
        app:layout_constraintEnd_toStartOf="@+id/most_points" />

    <Button
        android:id="@+id/button_away_rebounds"
        style="@style/ButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/choose"
        app:layout_constraintBaseline_toBaselineOf="@+id/most_rebounds"
        app:layout_constraintEnd_toStartOf="@+id/most_rebounds" />

    <Button
        android:id="@+id/button_away_assists"
        style="@style/ButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/choose"
        app:layout_constraintBaseline_toBaselineOf="@+id/most_assists"
        app:layout_constraintEnd_toStartOf="@+id/most_assists" />

    <Button
        android:id="@+id/button_home_points"
        style="@style/ButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/choose"
        app:layout_constraintBaseline_toBaselineOf="@+id/most_points"
        app:layout_constraintStart_toEndOf="@+id/most_points" />

    <Button
        android:id="@+id/button_home_rebounds"
        style="@style/ButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/choose"
        app:layout_constraintBaseline_toBaselineOf="@+id/most_rebounds"
        app:layout_constraintStart_toEndOf="@+id/most_rebounds" />

    <Button
        android:id="@+id/button_home_assists"
        style="@style/ButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/choose"
        app:layout_constraintBaseline_toBaselineOf="@+id/most_assists"
        app:layout_constraintStart_toEndOf="@+id/most_assists" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="121dp" />

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/most_assists">

        <RadioButton
            android:id="@+id/button_winner_away"
            style="@style/RadioButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="50dp"
            android:checked="false" />

        <TextView
            android:id="@+id/game_winner_label"
            style="@style/GameStatLabels"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/game_winner" />

        <RadioButton
            android:id="@+id/button_winner_home"
            style="@style/RadioButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="50dp"
            android:checked="false" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>